--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 	<meta name="google-site-verification" content="wkcAVWy8ClxzqSm5y4O1zgeSVSi3QBaFD69VQP5YNvQ">
 
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="{{ page.title }} / Civic Futures Summit Central Texas">
+	<meta property="og:title" content="{{ page.title }} / Reopening RI">
 	<meta property="og:url" content="{{ site.url }}{{ page.url }}">
 	<meta property="og:site_name" content="{{ site.title }}">
 	<meta property="og:description" content="{{ site.description }}">
