--- a/_sass/abstracts/project/_colors.scss
+++ b/_sass/abstracts/project/_colors.scss
@@ -2,7 +2,7 @@
 // Color system
 //
 
-// Custom values for Brown Policy Lab
+// Custom values for The Policy Lab
 $white:    #fff;
 //$gray-100: #f8f9fa !default;
 $gray-200: #e1e1e5;
