--- a/_sass/abstracts/project/_fonts.scss
+++ b/_sass/abstracts/project/_fonts.scss
@@ -1,9 +1,9 @@
 // Define a "System" font stack for fallbacks
 @font-face {
-  font-family: 'System Sans';
+  font-family: 'Work Sans';
   font-style: normal;
   font-weight: normal;
-  src: local(".SFNSText-Light"),
+  src: local("Work Sans"),
        local(".HelveticaNeueDeskInterface-Light"),
        local(".LucidaGrandeUI"),
        local("Ubuntu Light"),
@@ -14,9 +14,9 @@
 }
 
 // Define the family and weights
-$font-name__custom: 'Rajdhani';
+$font-name__custom: 'Work Sans';
 
-$font-stack__sans: 'System Sans', 'Segoe UI', 'Lucida Grande', sans-serif;
+$font-stack__sans: 'Work Sans', sans-serif;
 $font-stack__serif: Georgia, TimesNewRoman, 'Times New Roman', serif;
 $font-stack__mono: monospace;
 
@@ -24,7 +24,7 @@ $font-stack__custom: $font-name__custom, $font-stack__sans;
 
 $font-weight__normal: 400;
 $font-weight__medium: 600;
-$font-weight__bold: 700;
+$font-weight__bold: 900;
 
 $line-height__base: 1.33; // This font family needs tighter line-height
 $line-height__tight: 1;
