--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,8 @@
   <title>{{ page.title }}</title>
   <meta name="description" content="{{ site.description }}">
 
-  <style type="text/css">@import url(https://fonts.googleapis.com/css?family=Rajdhani:400,600,700);</style>
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
+
   <link type="text/css" rel="stylesheet" href="{{ '/' | relative_url }}assets/css/main.css">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
